# wu-blackhole

./: .env.WuBlackhole.example  .gitignore  README.md  WuBlackHole.py  config.py  requirements.txt  settings.py  wublackholeclient.py  wublackholeclient.pyproject
_old_src/: config.py
_old_src/common/: helper.py  wbh_bot.py
_old_src/pyclient/: input_password.py  restore_backup_window.ui
_old_src/wublackhole/: wbh_blackhole.py
blackholeguiclient/: LICENSE  README.rst  pyproject.toml
blackholeguiclient/src/blackholeguiclient/: __main__.py  app.py
blackholeguiclient/src/blackholeguiclient.dist-info/: METADATA
common/: helper.py  wbh_bot.py  wbh_db.py
config/: client_config.json  config.json.example
docker/: Dockerfile  _linux-build.sh
pyclient/: client_config.py  input_password.ui  main_window.py  main_window.ui  restore_backup_window.py  restore_backup_window.ui
src/main/python/: input_password.py  main.py  main_window.py  restore_backup_window.py  settings.py  wbh_blackhole.py  wbh_bot.py  wbh_db.py  wbh_item.py  wbh_queue.py
src/main/resources/: main_window.ui
src/main/resources/base/: main_window.ui
tests/: benchmark_checksum.py  benchmark_encryptions.py  test-config.json  test_000_blackhole.py  test_blackhole_retrieval.py
wublackhole/: helper.py  wbh_blackhole.py  wbh_bot.py  wbh_db.py  wbh_item.py  wbh_queue.py  wbh_watcher.py
wublackholeclient5/: client_config.py  main_window.py  main_window.ui  mainwindow.ui  wublackholeclient.py  wublackholeclient.pyproject
